src/chrome/komodo/skin/plat/shared/window.less
/* ... */
/* Separators */

separator.groovy-thin,
separator.groove
{
    border-width: @separator-border-width !important;
    border-style: @separator-border-style !important;
    border-color: @separator-border-color !important;
}

/* Main Window */

.blank-workspace
{
    background: @workspace-background !important;
}

/* Buttons */

button.show-icon
{
    .button-icon
    {
        display: block !important;
    }
}

button:not(.button-toolbar-a):not(.button-toolbar-b):not(.button-toolbar-c):not(.button-toolbar-d):not(.button-link):not(.button-plain):not([type="menu"]),
:not(toolbarbutton):not(toolbaritem) > toolbarbutton
{
    -moz-appearance: @button-appearance;
    background: @button-background;
    color: @button-color;
    border: @button-border;
    text-shadow: @button-text-shadow;
    border-radius: @button-border-radius;

    &[disabled="true"]
    {
        color: @button-color-disabled;
    }
}

/* Embedded buttons - buttons that do not look like buttons unless interacted with */

button:-moz-any(.button-toolbar-a, .button-toolbar-b, .button-toolbar-c, .button-toolbar-d, .button-plain),
:not(toolbarbutton):not(toolbaritem) > toolbarbutton
{
    &:-moz-any(button)
    {
        -moz-appearance: @button-appearance;
    }

    &:-moz-any(toolbarbutton)
    {
        -moz-appearance: @toolbarbutton-appearance;
    }

    background: @button-embedded-background;
    color: @button-embedded-color;
    border: @button-embedded-border;
    text-shadow: @button-embedded-text-shadow;
    border-radius: @button-border-radius;

    &[disabled="true"]
    {
        color: @button-embedded-color-disabled;
    }
}

.button-toolbar-a
{
    min-width: 32px !important;
    -moz-box-pack: center;
    
    &, *
    {
        border: 0 !important;
    }
    
    &:hover
    {
        &:-moz-any(button)
        {
            -moz-appearance: button;
        }
    
        &:-moz-any(toolbarbutton)
        {
            -moz-appearance: toolbarbutton;
        }
    }
}

autorepeatbutton
{
    border: 0;
}

/* Button States */
button:not([disabled="true"]):not(.button-link):not([type="menu"]),
:not(toolbarbutton):not(toolbaritem) > toolbarbutton:not([disabled="true"])
{
    border-radius: @button-border-radius;

    .button-internal-box
    {
        border: @button-internal-border;
    }

    &:-moz-any(button)
    {
        -moz-appearance: @button-appearance;
    }

    &:-moz-any(toolbarbutton)
    {
        -moz-appearance: @toolbarbutton-appearance;
    }

    &:hover
    {
        background: @button-background-hover !important;
        color: @button-color-hover !important;
        border: @button-border-hover;
        text-shadow: @button-text-shadow-hover !important;

        .button-internal-box
        {
            border: @button-internal-border-hover;
        }
    }

    &:active
    {
        background: @button-background-active !important;
        color: @button-color-active !important;
        border: @button-border-active;
        text-shadow: @button-text-shadow-active !important;
    }
}

/* Buttons with forced icons */
button.with-icon .button-icon
{
    display: block !important;
    margin-right: 5px;
}

/* Textbox & Menu Elements */
:-moz-any(textbox, menulist, button[type="menu"]):not(.plain)
{
    background-color: @textbox-background;
    color: @textbox-color;
    box-shadow: @textbox-box-shadow;

    border: @textbox-border;
    border-radius: @textbox-border-radius;
    
    &[disabled="true"]
    {
        background-color: @textbox-background-disabled;
        color: @textbox-color-disabled;
        border: @textbox-border-disabled;
    }

    &[type="autocomplete"][disabled="true"] > hbox
    {
        background-color: @textbox-background-disabled;
    }

    &:-moz-any(textbox)
    {
        -moz-appearance: @textbox-appearance;
        &[enablehistory=true] > .autocomplete-textbox-container
        {
            /* Override the -moz-appearance set on autocomplete textboxes. */
            -moz-appearance: @textbox-appearance;
        }
    }

    &:-moz-any(menulist, button[type="menu"])
    {
        -moz-appearance: @menulist-appearance;
        min-height: 20px;
        min-width: 40px;
        
        .menulist-editable-box
        {
            -moz-appearance: @menulist-editable-box-appearance;
        }
    }

    &:-moz-any(menulist, textbox[type="autocomplete"])
    {
        dropmarker
        {
            -moz-appearance: @menulist-dropmarker-appearance;
            background: @menulist-dropmarker-background;
            border: @menulist-dropmarker-border;
            display: @menulist-dropmarker-display;
        }
    }
}

.menulist-editable-input
{
    color: @textbox-color;
}

/* Statusbar */

statusbar
{
    .statusbar-resizerpanel
    {
        visibility: collapse;
    }
}

/* Statusbar Buttons */

statusbar:not(.bottombar) button:not([type="menu"]),
statusbar:not(.bottombar) toolbarbutton:not(.breadcrumb)
{
    -moz-appearance: @statusbar-button-appearance;
    background: @statusbar-button-background;
    color: @statusbar-button-color;
    border: @statusbar-button-border !important;

    margin: 0;
    padding: 0 2px !important;
    border-radius: 4px;

    &:hover
    {
        background: @statusbar-button-background-hover;
        color: @statusbar-button-color-hover;
        border: @statusbar-button-border-hover !important;
    }
}

textbox.plain
{
    color: @textbox-color;
}
/* ... */

